MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m"